# regret-ladder

./: .gitignore  CLAUDE.md  README.md  REMINDERS.md  foundations.html  games.html  index.html  kuhn.html  leduc.html  pyproject.toml  references.html  regret.html  render.yaml  requirements-web.txt  requirements.txt  results.html  rps.html
docs/: repo_audit_before_cleanup.md  repo_structure.md
experiments/: exp01_baseline_tournament.py  exp02_rps_convergence.py  exp03_train_cfr.py  exp03_week3_tournament.py  exp04_cfr_variants_kuhn.py  exp04b_mccfr_kuhn.py  exp05_leduc_cfr_variants.py  exp06_leduc_mccfr.py  exp06_leduc_tournament.py  exp07_kuhn_full_tournament.py  exp07_rps_cfrplus.py
poker_ai/agents/: base.py  (+13 more)
reports/: Exploitability_and_Tournament_Report.md  Exploitability_and_Tournament_Report.tex  Final_Report.md
scripts/: build_static_site.py  build_web_static_data.py  demo_bot_duplicate_pairs.py  deploy_gh_pages.py  make_week01_brief_report.py  make_week01_report.py  observe_openspiel_game.py  play_human_mystery_bots.py  play_human_round_robin.py  smoke_test_openspiel.py  validate_week3.py  validate_week4.py  validate_week4b.py  validate_week5.py  validate_week6.py
static/: debug_charts.html
tests/: test_agents_choose_legal_actions.py  test_cfr_plus.py  test_cfr_smoke.py  test_duplicate_pairing.py  test_evaluation_keys.py  test_leduc_smoke.py  test_mccfr.py  test_regret_matching_plus.py  test_regret_matching_properties.py  test_regret_matching_rps.py  test_web.py
web/: app.py  bots.py  kuhn_engine.py  leduc_engine.py  rps_engine.py  training_stream.py
(+71 files in other folders)
